@@ -6,7 +6,7 @@
 # Default config by Mike Kershaw <urmk@reason.marist.edu>
 
 # Version of Kismet config
-version=2.7.0
+version=2.7.1
 
 # MAC addresses to filter, comma seperated.  Hex MUST BE in all caps!
 macfilter=DE:AD:BE:EF:00:00
