@@ -135,7 +135,7 @@ case "$CARDTYPE" in
 		;;
 	"prism2_hostap")
 		echo "Disabling monitor mode for a hostap prism2 card on $DEVICE"
-		iwpriv $DEVICE monitor 0
+		iwconfig $DEVICE mode managed
 		ifconfig $DEVICE -promisc up
 		;;
 	"orinoco")
